# sharp-cocoro

./: .gitignore  README.md  justfile  pyproject.toml  pytest.ini  requirements.txt
sharp_cocoro/: __init__.py  cocoro.py  device.py  http_adapter.py  properties.py  response_types.py  state.py
sharp_cocoro/devices/: __init__.py  unknown.py
sharp_cocoro/devices/aircon/: __init__.py  aircon.py  aircon_properties.py
sharp_cocoro/devices/purifier/: purifier.py  purifier_properties.py
src/: cocoro.py  device.py  properties.py  response_types.py
src/devices/aircon/: aircon_properties.py
src/devices/purifier/: purifier.py
