[tool.poetry]
name = "sharp-cocoro"
version = "0.1.2"
description = "A Python SDK for the Cocoro API"
authors = ["David Mohl <git@d.sh>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sharp_cocoro"}]

[tool.poetry.dependencies]
python = ">=3.8"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"