[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sharp-cocoro"
version = "0.2.2"
description = "A Python SDK for the Cocoro API"
authors = [
    {name = "David Mohl", email = "git@d.sh"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/dvcrn/sharp-cocoro"
Repository = "https://github.com/dvcrn/sharp-cocoro"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy"
]

[tool.hatch.build.targets.wheel]
packages = ["sharp_cocoro"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-vcr>=1.0.2",
    "vcrpy>=6.0.2",
]
